--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li class="chapter-item" data-chapter="2">
                 <span class="chapter-number">2장</span>
-                <span class="chapter-title">대안 접근법과 이용자 페르소나</span>
+                <span class="chapter-title">고급 프롬프트 패턴</span>
             </li>
             <li class="chapter-item" data-chapter="3">
                 <span class="chapter-number">3장</span>
@@ -40,6 +40,18 @@
     <!-- Main Content -->
     <main id="content">
 
+        <!-- Search Bar -->
+        <div id="search-bar">
+            <div class="search-container">
+                <svg class="search-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="11" cy="11" r="8"/><path d="M21 21l-4.35-4.35"/></svg>
+                <input type="text" id="search-input" placeholder="어떤 업무를 처리하고 싶으세요? (예: 여행 일정, 비교 분석, 전문가 상담, 코드 리뷰...)" />
+                <button id="search-btn" onclick="aiSearch()">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
+                </button>
+            </div>
+            <div id="search-status"></div>
+        </div>
+
         <!-- Chapter 1 -->
         <article class="chapter" id="chapter-1">
             <div class="chapter-hero">
@@ -48,7 +60,7 @@
             </div>
 
             <!-- Section: 프롬프트의 3가지 유형 -->
-            <section>
+            <section id="sec-prompt-types">
                 <div class="section-title">
                     <h2>프롬프트의 3가지 유형</h2>
                 </div>
@@ -133,7 +145,7 @@
             </section>
 
             <!-- Section: 제로샷, 원샷, 퓨샷 -->
-            <section>
+            <section id="sec-shot-prompting">
                 <div class="section-title">
                     <h2>제로샷, 원샷, 퓨샷 프롬프팅</h2>
                 </div>
@@ -232,7 +244,7 @@ HS Code:</code></pre>
             </section>
 
             <!-- Section: 페르소나 패턴 -->
-            <section>
+            <section id="sec-persona">
                 <div class="section-title">
                     <h2>페르소나 패턴</h2>
                 </div>
@@ -310,7 +322,7 @@ FTA 협정 세율과 원산지 규정의 전문가로
             </section>
 
             <!-- Section: 마크다운을 이용한 프롬프트 -->
-            <section>
+            <section id="sec-markdown">
                 <div class="section-title">
                     <h2>마크다운을 이용한 읽기 쉽고 명료한 프롬프트</h2>
                 </div>
@@ -493,7 +505,7 @@ FTA 활용과 원산지 증명 전문가입니다
             </section>
 
             <!-- Section: 표현 강도 조절 -->
-            <section>
+            <section id="sec-strength">
                 <div class="section-title">
                     <h2>글의 표현 강도와 중요도를 조절하는 방법</h2>
                 </div>
@@ -561,15 +573,15 @@ FTA 활용과 원산지 증명 전문가입니다
 어떤 경우에도 영어를 사용하지 마세요
 
 ## 우선순위
-최우선(절대조건)
+🔴 최우선(절대조건)
 - 개인 정보 절대 출력하지 않는다
 - 사실과 다른 내용을 생성하지 않는다
 
-중요(일반 조건)
+🟡 중요(일반 조건)
 - 답변은 500자 이내로 작성
 - 전문 용어 괄호 설명 추가
 
-선택(권장 조건)
+🟢 선택(권장 조건)
 - 가능하면 실제 사례 포함
 - 표나 목록을 활용하면 더 좋다</code></pre>
                     </div>
@@ -623,20 +635,19 @@ FTA 활용과 원산지 증명 전문가입니다
         </article>
 
         <!-- Chapter 2 -->
-        <article class="chapter" id="chapter-2" style="display:none;">
+        <article class="chapter" id="chapter-2">
             <div class="chapter-hero">
                 <h1>2장</h1>
-                <p>대안 접근법과 이용자 페르소나</p>
+                <p>고급 프롬프트 패턴</p>
             </div>
 
             <!-- Section: 대안 접근법 패턴 -->
-            <section>
+            <section id="sec-alternatives">
                 <div class="section-title">
-                    <h2>대안 접근법 패턴</h2>
+                    <h2>대안 접근법 패턴: 모든 대안과 해결책 찾아보기</h2>
                 </div>
 
                 <div class="card">
-                    <p class="card-desc">모든 대안과 해결책 찾아보기</p>
                     <div class="info-box">
                         <ul>
                             <li><strong>일반 프롬프트:</strong> 어떻게 하면 좋을까? → AI가 임의로 하나 선택</li>
@@ -669,7 +680,6 @@ python에서 엑셀 파일을 읽고 싶어
                     </div>
                 </div>
 
-                <!-- 유형1: 단순 나열형 -->
                 <div class="card">
                     <div class="card-header">
                         <h3>유형 1: 단순 나열형</h3>
@@ -697,7 +707,6 @@ python에서 엑셀 파일을 읽고 싶어
                     </div>
                 </div>
 
-                <!-- 유형2: 축 기반 비교형 -->
                 <div class="card">
                     <div class="card-header">
                         <h3>유형 2: 축 기반 비교형</h3>
@@ -723,7 +732,6 @@ python에서 엑셀 파일을 읽고 싶어
                     </div>
                 </div>
 
-                <!-- 유형3: 상황별 분기형 -->
                 <div class="card">
                     <div class="card-header">
                         <h3>유형 3: 상황별 분기형</h3>
@@ -750,7 +758,6 @@ python에서 엑셀 파일을 읽고 싶어
                     </div>
                 </div>
 
-                <!-- 유형4: 역발상 대안형 -->
                 <div class="card">
                     <div class="card-header">
                         <h3>유형 4: 역발상 대안형</h3>
@@ -773,17 +780,34 @@ python에서 엑셀 파일을 읽고 싶어
             </section>
 
             <!-- Section: 이용자 페르소나 패턴 -->
-            <section>
+            <section id="sec-user-persona">
                 <div class="section-title">
-                    <h2>이용자 페르소나 패턴</h2>
+                    <h2>이용자 페르소나 패턴: 대상에 특화된 맞춤형 답변 유도하기</h2>
                 </div>
 
                 <div class="card">
-                    <p class="card-desc">대상에 특화된 맞춤형 답변 유도하기</p>
                     <div class="info-box">
                         <ul>
                             <li><strong>기존 페르소나 패턴:</strong> AI의 역할 정의</li>
                             <li><strong>이용자 페르소나:</strong> 이 답변을 듣는 사람은 ~~입니다.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>이용자 페르소나 설계 체크리스트</h3>
+                    </div>
+                    <div class="info-box">
+                        <ul>
+                            <li>이 사람의 직업과 역할은?</li>
+                            <li>이 주제에 대한 사전 지식은 어느 정도인가?</li>
+                            <li>이 정보로 무엇을 결정하거나 실행할 예정인가?</li>
+                            <li>지금 어떤 상태인가 (급함/여유)</li>
+                            <li>얼마나 긴 답변을 읽을 여유가 있는가?</li>
+                            <li>가장 두려워 하는 것은?</li>
+                            <li>가장 원하는 것은?</li>
+                            <li>절대 쓰면 안 되는 언어나 표현이 있나?</li>
                         </ul>
                     </div>
                 </div>
@@ -833,10 +857,268 @@ python에서 엑셀 파일을 읽고 싶어
                     </div>
                 </div>
             </section>
+
+            <!-- Section: 레시피 패턴 -->
+            <section id="sec-recipe">
+                <div class="section-title">
+                    <h2>레시피 패턴: 목표 달성을 위한 작업 단계 받기</h2>
+                </div>
+
+                <div class="card">
+                    <p class="card-desc">구체적인 순서를 요구할 때, 다음에 무엇을 해야 할지 고민하는 시간을 줄이고, 혼자 일을 처리해야 할 경우에 활용합니다.</p>
+                    <div class="info-box">
+                        <ul>
+                            <li><strong>일반 질문:</strong> 수출 자동화 어떻게 해? → 개념설명, 두루뭉실한 방향</li>
+                            <li><strong>레시피 패턴:</strong> 수출 자동화를 위한 단계별 절차를 주세요 → 순서있는 행동 지침</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>기본 단계 레시피</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>단계별 레시피 프롬프트</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code># 목표
+PYTHON 초보자가 무역 HS Code 자동 분류 프로그램 만들기
+
+# 현재 상태
+- PYTHON 설치만 되어 있음
+- 프로그래밍 경험 없음
+- 엑셀로 품목 데이터 500개 보유
+
+# 요청
+위의 목표를 달성하기 위한 단계별 레시피를 작성하세요
+각 단계는 아래 형식으로 작성하세요
+
+## STEP {번호}: {단계명}
+- 할 일: {구체적 행동}
+- 소요 시간: {예상 기간}
+- 완료 기준: {이것이 되면 다음으로}
+- 주의사항: {흔한 실수}</code></pre>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>분기 포함 레시피</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>분기 상황 포함 프롬프트</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>무역 계약 클레임 처리 절차를 단계별로 작성하세요
+단, 각 단계에서 발생할 수 있는 분기 상황도 포함하세요
+
+형식:
+STEP N. {행동}
+- 정상: {이 결과면 다음 단계로}
+- 이상: {이 결과면 어떻게 대응}</code></pre>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>체크리스트형 레시피</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>실행 체크리스트 프롬프트</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>신규 수출 거래처와의 첫 계약 체결을 위한 실행 체크리스트 작성해주세요
+
+형식:
+[] {행동} - {이유 또는 주의사항}</code></pre>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Section: 뒤집힌 상호작용 패턴 -->
+            <section id="sec-flipped">
+                <div class="section-title">
+                    <h2>뒤집힌 상호작용 패턴: AI가 묻고 사용자가 답한다</h2>
+                </div>
+
+                <div class="card">
+                    <p class="card-desc">AI가 가진 방대한 정보량을 활용하여, AI가 먼저 질문하고 사용자가 답하는 방식으로 더 정확한 결과를 얻습니다.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>기본 방법: 질문 먼저, 답은 나중</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>방법 1: 한꺼번에 질문 / 방법 2: 하나씩 질문</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code># 방법 1: 질문 먼저, 답은 나중
+제가 원하는 결과물은 {목표}입니다.
+바로 만들지 말고, 먼저 필요한 정보를 질문해 주세요
+모든 정보가 수집된 후 결과물을 작성하세요
+
+# 방법 2: 한 번에 하나씩
+제가 원하는 결과물은 {목표}입니다
+한 번에 하나의 질문만 하세요
+제가 답하면 다음 질문으로 넘어가고
+충분한 정보가 모이면 결과물을 작성하세요</code></pre>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>수출 제안서 작성</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>수집 항목 지정 프롬프트</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>목표: 수출 제안서를 작성해 주세요
+
+바로 작성하지 말고, 먼저 아래 항목들을 질문해서
+제 답변을 모두 수집한 후 작성하세요
+
+수집이 필요한 정보:
+- 제품정보
+- 타깃 바이어
+- 핵심 강점
+- 가격 정책
+- 납기 조건</code></pre>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>학습 계획서 작성</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>하나씩 질문 프롬프트</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>python 학습 계획서를 만들어 주세요.
+
+단, 한 번에 하나의 질문만 하고
+제 답변을 들은 뒤 다음 질문으로 넘어가세요
+5~7개 질문이 끝나면 맞춤형 학습 계획서를 작성해 주세요</code></pre>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Section: 인지 검증자 패턴 -->
+            <section id="sec-cognitive">
+                <div class="section-title">
+                    <h2>인지 검증자 패턴: 복잡한 문제를 더 잘 다루는 방법</h2>
+                </div>
+
+                <div class="card">
+                    <p class="card-desc">AI가 하위 질문을 먼저 분석하여 상위 질문으로 넘어가는 방식입니다.</p>
+                    <div class="info-box">
+                        <ul>
+                            <li><strong>일반 패턴:</strong> 복잡한 질문 입력 → 즉각 답변 → 오류, 누락 가능성 높음</li>
+                            <li><strong>인지 검증자 패턴:</strong> 복잡한 질문 입력 → AI가 하위 질문 분해 → 각 질문을 순서대로 검증 → 검증된 답을 통합 → 신뢰도, 정확도 높음</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>하위 질문 분해 요청</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>인지 검증자 기본 프롬프트</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>복잡한 질문: 우리 회사가 베트남에 생산 법인을 설립하면
+세금, 인력, 물류 측면에서 유리한가요?
+
+&lt;인지 검증자 패턴&gt;
+먼저 이 질문을 풀기 위한 하위 질문을 도출하고
+각각을 검증한 뒤 통합된 판단을 내립니다</code></pre>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h3>명시적 분해 / 전문가 검증</h3>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>방법 1: 명시적 분해 요청</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>질문: Python으로 무역 데이터 자동화를 구축할 때
+클라우드 서버가 필요한가요?
+
+위 질문에 바로 답하지 말고
+먼저 이 질문을 정확히 답하기 위해 필요한 하위 질문을 3~5개 도출하세요
+각 하위 질문에 순서대로 답한 뒤
+최종 통합 답변을 제시하세요.</code></pre>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header">
+                            <span>방법 2: 전문가 검증 방식</span>
+                            <button class="copy-btn" onclick="copyCode(this)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
+                                복사
+                            </button>
+                        </div>
+                        <pre><code>{전문 분야} 전문가처럼 이 문제를 다루세요.
+확신이 없는 부분은 가정으로 명시하고
+각 판단의 근거를 함께 제시하면서
+단계적으로 결론에 도달하세요</code></pre>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Section: 게임 플레이 패턴 -->
+            <section id="sec-game">
+                <div class="section-title">
+                    <h2>게임 플레이 패턴: 지금부터 게임을 시작하지!</h2>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h3>콘텐츠 준비 중</h3>
+                    </div>
+                    <p class="card-desc">게임 플레이 패턴의 내용이 곧 추가될 예정입니다.</p>
+                </div>
+            </section>
         </article>
 
         <!-- Chapter 3 -->
-        <article class="chapter" id="chapter-3" style="display:none;">
+        <article class="chapter" id="chapter-3">
             <div class="chapter-hero">
                 <h1>3장</h1>
                 <p>준비 중</p>
@@ -852,6 +1134,7 @@ python에서 엑셀 파일을 읽고 싶어
         </article>
     </main>
 
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
